Updating userRouting and uiserSchema to support assignments and scheduling
