# c01/backend/swagger.json
@@ -1316,6 +1316,10 @@
               "tags":
               {
                 "type": ["string"]
+              },
+              "isAssignment":
+              {
+                "type":"boolean"
               }
             }
           }
